force-app/main/default/objects/RepairOrder__c/fields/PlannedDate__c.field-meta.xml
<CustomField>
    <fullName>PlannedDate__c</fullName>
    <label>Planned Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>