force-app/main/default/objects/RepairOrder__c/fields/RepairStatus__c.field-meta.xml
<CustomField>
    <fullName>RepairStatus__c</fullName>
    <label>RepairStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planning</fullName>
                <default>true</default>
                <label>Planning</label>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Finished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>