force-app/main/default/objects/RepairOrder__c/fields/VehicleTest__c.field-meta.xml
<CustomField>
    <fullName>VehicleTest__c</fullName>
    <label>Vehicle Test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unauthorized</fullName>
                <default>true</default>
                <label>Unauthorized</label>
            </value>
            <value>
                <fullName>Authorized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>